[package]
name = "integer_or_float"
version = "0.1.2"
authors = ["Fredrick Brennan <copypaste@kittens.ph>"]
edition = "2021"
build = "build.rs"
# crates.io
license = "Apache-2.0"
keywords = ["types", "ufo", "font-format", "glif", "fonts", "no-std", "std"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
float-cmp = { version = "0.9", default-features = false, optional = true }
serde = { version = "1.0", default-features = false, features = ["derive"], optional = true }
num-traits = { version = "0.2", default-features = false, optional = true }
log = { version = "0.4", optional = true }
derive_more = { version = "0.99" }

[build-dependencies]
autocfg = "1.0"
cfg-if = "1.0"
cargo-emit = "0.2"
indoc = "1.0"

[features]
default = ["serde", "serde/std", "serde/default", "float-cmp", "float-cmp/std", "num-traits", "num-traits/std"]

ignore_no_std_tests_check = []
